@@ -1,3 +1,8 @@
+Sun Jun 03 11:43:44 GMT 2012  Olly Betts <olly@survex.com>
+
+	* include/xapian/query.h: Add second fake specialised form of the
+	  templated iterator Query constructor, for use in the Java bindings.
+
 Sat Jun 02 12:15:11 GMT 2012  Olly Betts <olly@survex.com>
 
 	* docs/scalability.rst: Update gmane size, fix a typo, tweak wording.
